cmake_minimum_required(VERSION 3.9)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(leetcode main.cpp Base.h
        #1.two_sum/TwoSum.cpp 1.two_sum/TwoSum.h
        #2.add_two_numbers/AddTwoNumbers.cpp 2.add_two_numbers/AddTwoNumbers.h
        #3.longest_substring_without_repeating_characters/LongestSubstringWithoutRepeatingCharacters.cpp 3.longest_substring_without_repeating_characters/LongestSubstringWithoutRepeatingCharacters.h
        #4.median_of_two_sorted_arrays/MedianOfTwoSortedArrays.cpp 4.median_of_two_sorted_arrays/MedianOfTwoSortedArrays.h
        #5.longest_palindromic_substring/LongestPalindromicSubstring.cpp 5.longest_palindromic_substring/LongestPalindromicSubstring.h
        #6.zigzagz_conversion/ZigZagConversion.cpp 6.zigzagz_conversion/ZigZagConversion.h
        #7.reverse_integer/ReverseInteger.cpp 7.reverse_integer/ReverseInteger.h
        #8.atoi/StringToInteger.cpp 8.atoi/StringToInteger.h
        #9.palindrome_number/PalindromeNumber.cpp 9.palindrome_number/PalindromeNumber.h
        #10.regular_expression_matching/RegularExpressionMatching.cpp 10.regular_expression_matching/RegularExpressionMatching.h
        #11.container_with_most_water/ContainerWithMostWater.cpp 11.container_with_most_water/ContainerWithMostWater.h
        #12.integer_to_roman/IntegerToRoman.cpp 12.integer_to_roman/IntegerToRoman.h
        #13.roman_to_integer/RomanToInteger.cpp 13.roman_to_integer/RomanToInteger.h
        #14.longest_common_prefix/LongestCommonPrefix.cpp 14.longest_common_prefix/LongestCommonPrefix.h
        #15.three_sum/ThreeSum.cpp 15.three_sum/ThreeSum.h
        #16.three_sum_closest/ThreeSumClosest.cpp 16.three_sum_closest/ThreeSumClosest.h
        #17.letter_combinations_of_a_phone_number/LetterCombinationsOfAPhoneNumber.cpp 17.letter_combinations_of_a_phone_number/LetterCombinationsOfAPhoneNumber.h
        #18.four_sum/FourSum.cpp 18.four_sum/FourSum.h
        #19.remove_nth_node_from_end_of_list/RemoveNthNodeFromEndOfList.cpp 19.remove_nth_node_from_end_of_list/RemoveNthNodeFromEndOfList.h
        #20.valid_arentheses/ValidParentheses.cpp 20.valid_arentheses/ValidParentheses.h
        #21.merge_2_sorted_lists/Merge2SortedLists.cpp 21.merge_2_sorted_lists/Merge2SortedLists.h
        #22.generate_parentheses/GenerateParentheses.cpp 22.generate_parentheses/GenerateParentheses.h
        #23.merge_k_sorted_lists/MergeKSortedLists.cpp 23.merge_k_sorted_lists/MergeKSortedLists.h
        #24.swap_nodes_in_pairs/SwapNodesInPairs.cpp 24.swap_nodes_in_pairs/SwapNodesInPairs.h
        #25.reverse_nodes_in_k_group/ReverseNodesInKGroup.cpp 25.reverse_nodes_in_k_group/ReverseNodesInKGroup.h
        #26.remove_duplicates_from_sorted_array/RemoveDuplicatesFromSortedArray.cpp 26.remove_duplicates_from_sorted_array/RemoveDuplicatesFromSortedArray.h
        #27.remove_element/RemoveElement.cpp 27.remove_element/RemoveElement.h
        #28.strstr/StrStr.cpp 28.strstr/StrStr.h
        #29.divide_two_integers/DivideTwoIntegers.cpp 29.divide_two_integers/DivideTwoIntegers.h
        #30.substring_with_concatenation_of_all_words/SubstringWithConcatenationOfAllWords.cpp 30.substring_with_concatenation_of_all_words/SubstringWithConcatenationOfAllWords.h
        #31.next_permutation/NextPermutation.cpp 31.next_permutation/NextPermutation.h
        #32.longest_valid_parentheses/LongestValidParentheses.cpp 32.longest_valid_parentheses/LongestValidParentheses.h
        #33.search_in_rotated_sorted_array/SearchInRotatedSortedArray.cpp 33.search_in_rotated_sorted_array/SearchInRotatedSortedArray.h
        #34.search_for_a_range/SearchForARange.cpp 34.search_for_a_range/SearchForARange.h
        #35.search_insert_position/SearchInsertPosition.cpp 35.search_insert_position/SearchInsertPosition.h
        #36.valid_sudoku/ValidSudoku.cpp 36.valid_sudoku/ValidSudoku.h
        #37.sudoku_solver/SudokuSolver.cpp 37.sudoku_solver/SudokuSolver.h
        #38.count_and_say/CountAndSay.cpp 38.count_and_say/CountAndSay.h
        #39.combination_sum/CombinationSum.cpp 39.combination_sum/CombinationSum.h
        #40.combination_sum_2/CombinationSum2.cpp 40.combination_sum_2/CombinationSum2.h
        #41.first_missing_positive/FirstMissingPositive.cpp 41.first_missing_positive/FirstMissingPositive.h
        #42.trapping_rain_water/TrappingRainWater.cpp 42.trapping_rain_water/TrappingRainWater.h
        #43.multiply_strings/MultiplyStrings.cpp 43.multiply_strings/MultiplyStrings.h
        #44.wildcard_matching/WildcardMatching.cpp 44.wildcard_matching/WildcardMatching.h
        #45.jump_game_2/JumpGame2.cpp 45.jump_game_2/JumpGame2.h
        #47.permutations_2/Permutations2.cpp 47.permutations_2/Permutations2.h
        #48.rotate_image/RotateImage.cpp 48.rotate_image/RotateImage.h
        #49.group_anagrams/GroupAnagrams.cpp 49.group_anagrams/GroupAnagrams.h
        #50.pow/Pow.cpp 50.pow/Pow.h
        #51.n_queens/NQueens.cpp 51.n_queens/NQueens.h
        #53.maximum_subarray/MaximumSubarray.cpp 53.maximum_subarray/MaximumSubarray.h
        #54.spiral_matrix/SpiralMatrix.cpp 54.spiral_matrix/SpiralMatrix.h
        #55.jump_game/JumpGame.cpp 55.jump_game/JumpGame.h
        #56.merge_intervals/MergeIntervals.cpp 56.merge_intervals/MergeIntervals.h
        #57.insert_interval/InsertInterval.cpp 57.insert_interval/InsertInterval.h
        #58.length_of_last_word/LengthOfLastWord.cpp 58.length_of_last_word/LengthOfLastWord.h
        #59.spiral_matrix_2/SpiralMatrix2.cpp 59.spiral_matrix_2/SpiralMatrix2.h
        #61.rotate_list/RotateList.cpp 61.rotate_list/RotateList.h
        #62.unique_paths/UniquePaths.cpp 62.unique_paths/UniquePaths.h
        #63.unique_paths_2/UniquePaths2.cpp 63.unique_paths_2/UniquePaths2.h
        #64.minimum_path_sum/MinimumPathSum.cpp 64.minimum_path_sum/MinimumPathSum.h
        #66.plus_one/PlusOne.cpp 66.plus_one/PlusOne.h
        #67.add_binary/AddBinary.cpp 67.add_binary/AddBinary.h
        #68.text_justification/TextJustification.cpp 68.text_justification/TextJustification.h
        #69.sqrt_x/Sqrt.cpp 69.sqrt_x/Sqrt.h
        #70.climbing_stairs/ClimbingStairs.cpp 70.climbing_stairs/ClimbingStairs.h
        #71.simplify_path/SimplifyPath.cpp 71.simplify_path/SimplifyPath.h
        #72.edit_distance/EditDistance.cpp 72.edit_distance/EditDistance.h
        #73.set_matrix_zeroes/SetMatrixZeroes.cpp 73.set_matrix_zeroes/SetMatrixZeroes.h
        #74.search_a_2d_matrix/SearchA2DMatrix.cpp 74.search_a_2d_matrix/SearchA2DMatrix.h
        #75.sort_colors/SortColors.cpp 75.sort_colors/SortColors.h
        #76.minimum_window_substring/MinimumWindowSubstring.cpp 76.minimum_window_substring/MinimumWindowSubstring.h
        #78.subsets/Subsets.cpp 78.subsets/Subsets.h
        #79.word_search/WordSearch.cpp 79.word_search/WordSearch.h
        #80.remove_duplicates_from_sorted_array_2/RemoveDuplicatesFromSortedArray2.cpp 80.remove_duplicates_from_sorted_array_2/RemoveDuplicatesFromSortedArray2.h
        #81.search_in_rotated_sorted_array_2/SearchInRotatedSortedArray2.cpp 81.search_in_rotated_sorted_array_2/SearchInRotatedSortedArray2.h
        #82.remove_duplicates_from_sorted_list_2/RemoveDuplicatesFromSortedList2.cpp 82.remove_duplicates_from_sorted_list_2/RemoveDuplicatesFromSortedList2.h
        #83.remove_duplicates_from_sorted_list/RemoveDuplicatesFromSortedList.cpp 83.remove_duplicates_from_sorted_list/RemoveDuplicatesFromSortedList.h
        #84.largest_rectangle_in_histogram/LargestRectangleInHistogram.cpp 84.largest_rectangle_in_histogram/LargestRectangleInHistogram.h
        #85.maximal_rectangle/MaximalRectangle.cpp 85.maximal_rectangle/MaximalRectangle.h
        #86.partition_list/PartitionList.cpp 86.partition_list/PartitionList.h
        #87.scramble_string/ScrambleString.cpp 87.scramble_string/ScrambleString.h
        #88.merge_sorted_array/MergeSortedArray.cpp 88.merge_sorted_array/MergeSortedArray.h
        #90.subsets_2/Subsets2.cpp 90.subsets_2/Subsets2.h
        #91.decode_ways/DecodeWays.cpp 91.decode_ways/DecodeWays.h
        #92.reverse_linked_list_2/ReverseLinkedList2.cpp 92.reverse_linked_list_2/ReverseLinkedList2.h
        #93.restore_ip_addresses/RestoreIPAddresses.cpp 93.restore_ip_addresses/RestoreIPAddresses.h
        #94.binary_tree_inorder_traversal/BinaryTreeInorderTraversal.cpp 94.binary_tree_inorder_traversal/BinaryTreeInorderTraversal.h
        #95.unique_binary_search_trees_2/UniqueBinarySearchTrees2.cpp 95.unique_binary_search_trees_2/UniqueBinarySearchTrees2.h
        #96.unique_binary_search_trees/UniqueBinarySearchTrees.cpp 96.unique_binary_search_trees/UniqueBinarySearchTrees.h
        #97.interleaving_string/InterleavingString.cpp 97.interleaving_string/InterleavingString.h
        #98.validate_binary_search_tree/ValidateBinarySearchTree.cpp 98.validate_binary_search_tree/ValidateBinarySearchTree.h
        #100.same_tree/SameTree.cpp 100.same_tree/SameTree.h
        #101.symmetric_tree/SymmetricTree.cpp 101.symmetric_tree/SymmetricTree.h
        #102.binary_tree_level_order_traversal/BinaryTreeLevelOrderTraversal.cpp 102.binary_tree_level_order_traversal/BinaryTreeLevelOrderTraversal.h
        #103.binary_tree_zigzag_level_order_traversal/BinaryTreeZigzagLevelOrderTraversal.cpp 103.binary_tree_zigzag_level_order_traversal/BinaryTreeZigzagLevelOrderTraversal.h
        #104.maximum_depth_of_binary_tree/MaximumDepthOfBinaryTree.cpp 104.maximum_depth_of_binary_tree/MaximumDepthOfBinaryTree.h
        #105.construct_binary_tree_from_preorder_and_inorder_traversal/ConstructBinaryTreeFromPreorderAndInorderTraversal.cpp 105.construct_binary_tree_from_preorder_and_inorder_traversal/ConstructBinaryTreeFromPreorderAndInorderTraversal.h
        #106.construct_binary_tree_from_inorder_and_postorder_traversal/ConstructBinaryTreeFromInorderAndPostorderTraversal.cpp 106.construct_binary_tree_from_inorder_and_postorder_traversal/ConstructBinaryTreeFromInorderAndPostorderTraversal.h
        #108.convert_sorted_array_to_binary_search_tree/ConvertSortedArrayToBinarySearchTree.cpp 108.convert_sorted_array_to_binary_search_tree/ConvertSortedArrayToBinarySearchTree.h
        #109.convert_sorted_list_to_binary_search_tree/ConvertSortedListToBinarySearchTree.cpp 109.convert_sorted_list_to_binary_search_tree/ConvertSortedListToBinarySearchTree.h
        #110.balanced_binary_tree/BalancedBinaryTree.cpp 110.balanced_binary_tree/BalancedBinaryTree.h
        #112.path_sum/PathSum.cpp 112.path_sum/PathSum.h
        #113.path_sum_2/PathSum2.cpp 113.path_sum_2/PathSum2.h
        #114.flatten_binary_tree_to_linked_list/FlattenBinaryTreeToLinkedList.cpp 114.flatten_binary_tree_to_linked_list/FlattenBinaryTreeToLinkedList.h
        #115.distinct_subsequences/DistinctSubsequences.cpp 115.distinct_subsequences/DistinctSubsequences.h
        #116.populating_next_right_pointers_in_each_node/PopulatingNextRightPointersInEachNode.cpp 116.populating_next_right_pointers_in_each_node/PopulatingNextRightPointersInEachNode.h
        #117.populating_next_right_pointers_in_each_node_2/PopulatingNextRightPointersInEachNode2.cpp 117.populating_next_right_pointers_in_each_node_2/PopulatingNextRightPointersInEachNode2.h
        #118.pascals_triangle/PascalsTriangle.cpp 118.pascals_triangle/PascalsTriangle.h
        #119.pascals_triangle2/PascalsTriangle2.cpp 119.pascals_triangle2/PascalsTriangle2.h
        #120.triangle/Triangle.cpp 120.triangle/Triangle.h
        #121.best_time_to_buy_and_sell_stock/BestTimeToBuyAndSellStock.cpp 121.best_time_to_buy_and_sell_stock/BestTimeToBuyAndSellStock.h
        #122.best_time_to_buy_and_sell_stock_2/BestTimeToBuyAndSellStock2.cpp 122.best_time_to_buy_and_sell_stock_2/BestTimeToBuyAndSellStock2.h
        #123.best_time_to_buy_and_sell_stock_3/BestTimeToBuyAndSellStock3.cpp 123.best_time_to_buy_and_sell_stock_3/BestTimeToBuyAndSellStock3.h
        #124.binary_tree_maximum_path_sum/BinaryTreeMaximumPathSum.cpp 124.binary_tree_maximum_path_sum/BinaryTreeMaximumPathSum.h
        #125.valid_palindrome/ValidPalindrome.cpp 125.valid_palindrome/ValidPalindrome.h
        #126.word_ladder_2/WordLadder2.cpp 126.word_ladder_2/WordLadder2.h
        #127.word_ladder/WordLadder.cpp 127.word_ladder/WordLadder.h
        #128.longest_consecutive_sequence/LongestConsecutiveSequence.cpp 128.longest_consecutive_sequence/LongestConsecutiveSequence.h
        #130.surrounded_regions/SurroundedRegions.cpp 130.surrounded_regions/SurroundedRegions.h
        #131.palindrome_partitioning/PalindromePartitioning.cpp 131.palindrome_partitioning/PalindromePartitioning.h
        #132.palindrome_partitioning_2/PalindromePartitioning2.cpp 132.palindrome_partitioning_2/PalindromePartitioning2.h
        #134.gas_station/GasStation.cpp 134.gas_station/GasStation.h
        #136.single_number/SingleNumber.cpp 136.single_number/SingleNumber.h
        #138.copy_list_with_random_pointer/CopyListWithRandomPointer.cpp 138.copy_list_with_random_pointer/CopyListWithRandomPointer.h
        #139.word_break/WordBreak.cpp 139.word_break/WordBreak.h
        #140.word_break_2/WordBreak2.cpp 140.word_break_2/WordBreak2.h
        #141.linked_list_cycle/LinkedListCycle.cpp 141.linked_list_cycle/LinkedListCycle.h
        #142.linked_list_cycle_2/LinkedListCycle2.cpp 142.linked_list_cycle_2/LinkedListCycle2.h
        #143.reorder_list/ReorderList.cpp 143.reorder_list/ReorderList.h
        #145.binary_tree_postorder_traversal/BinaryTreePostorderTraversal.cpp 145.binary_tree_postorder_traversal/BinaryTreePostorderTraversal.h
        #146.LRU_cache/LRUCache.cpp 146.LRU_cache/LRUCache.h
        #147.insertion_sort_list/InsertionSortList.cpp 147.insertion_sort_list/InsertionSortList.h
        #148.sort_list/SortList.cpp 148.sort_list/SortList.h
        #149.max_points_on_a_line/MaxPointsOnALine.cpp 149.max_points_on_a_line/MaxPointsOnALine.h
        #150.evaluate_reverse_polish_notation/EvaluateReversePolishNotation.cpp 150.evaluate_reverse_polish_notation/EvaluateReversePolishNotation.h
        #151.reverse_words_in_a_string/ReverseWordsInAString.cpp 151.reverse_words_in_a_string/ReverseWordsInAString.h
        #152.maximum_product_subarray/MaximumProductSubarray.cpp 152.maximum_product_subarray/MaximumProductSubarray.h
        #153.find_minimum_in_rotated_sorted_array/FindMinimumInRotatedSortedArray.cpp 153.find_minimum_in_rotated_sorted_array/FindMinimumInRotatedSortedArray.h
        #154.find_minimum_in_rotated_sorted_array_2/FindMinimumInRotatedSortedArray2.cpp 154.find_minimum_in_rotated_sorted_array_2/FindMinimumInRotatedSortedArray2.h
        #155.min_stack/MinStack.cpp 155.min_stack/MinStack.h
        #160.intersection_of_two_linked_lists/IntersectionOfTwoLinkedLists.cpp 160.intersection_of_two_linked_lists/IntersectionOfTwoLinkedLists.h
        #162.find_peak_element/FindPeakElement.cpp 162.find_peak_element/FindPeakElement.h
        #165.compare_version_numbers/CompareVersionNumbers.cpp 165.compare_version_numbers/CompareVersionNumbers.h
        #166.fraction_to_recurring_decimal/FractionToRecurringDecimal.cpp 166.fraction_to_recurring_decimal/FractionToRecurringDecimal.h
        #167.two_sum_2/TwoSum2.cpp 167.two_sum_2/TwoSum2.h
        #169.majority_element/MajorityElement.cpp 169.majority_element/MajorityElement.h
        #171.excel_sheet_column_number/ExcelSheetColumnNumber.cpp 171.excel_sheet_column_number/ExcelSheetColumnNumber.h
        #172.factorial_trailing_zeroes/FactorialTrailingZeroes.cpp 172.factorial_trailing_zeroes/FactorialTrailingZeroes.h
        #173.binary_search_tree_iterator/BinarySearchTreeIterator.cpp 173.binary_search_tree_iterator/BinarySearchTreeIterator.h
        #174.dungeon_game/DungeonGame.cpp 174.dungeon_game/DungeonGame.h
        #179.largest_number/LargestNumber.cpp 179.largest_number/LargestNumber.h
        #188.best_time_to_buy_and_sells_stock_4/BestTimeToBuyAndSellStock4.cpp 188.best_time_to_buy_and_sells_stock_4/BestTimeToBuyAndSellStock4.h
        #189.rotate_array/RotateArray.cpp 189.rotate_array/RotateArray.h
        #190.reverse_bits/ReverseBits.cpp 190.reverse_bits/ReverseBits.h
        #191.number_of_1_bits/NumberOf1Bits.cpp 191.number_of_1_bits/NumberOf1Bits.h
        #198.house_robber/HouseRobber.cpp 198.house_robber/HouseRobber.h
        #199.binary_tree_right_side_view/BinaryTreeRightSideView.cpp 199.binary_tree_right_side_view/BinaryTreeRightSideView.h
        #200.number_of_islands/NumberOfIslands.cpp 200.number_of_islands/NumberOfIslands.h
        #202.happy_number/HappyNumber.cpp 202.happy_number/HappyNumber.h
        #203.remove_linked_list_elements/RemoveLinkedListElements.cpp 203.remove_linked_list_elements/RemoveLinkedListElements.h
        #204.count_primes/CountPrimes.cpp 204.count_primes/CountPrimes.h
        #206.reverse_linked_list/ReverseLinkedList.cpp 206.reverse_linked_list/ReverseLinkedList.h
        #207.course_schedule/CourseSchedule.cpp 207.course_schedule/CourseSchedule.h
        #208.implement_trie/ImplementTrie.cpp 208.implement_trie/ImplementTrie.h
        #209.minimum_size_subarray_sum/MinimumSizeSubarraySum.cpp 209.minimum_size_subarray_sum/MinimumSizeSubarraySum.h
        #210.course_schedule_2/CourseSchedule2.cpp 210.course_schedule_2/CourseSchedule2.h
        #211.add_and_search_word/AddAndSearchWord.cpp 211.add_and_search_word/AddAndSearchWord.h
        #212.word_search_2/WordSearch2.cpp 212.word_search_2/WordSearch2.h
        #213.house_robber_2/HouseRobber2.cpp 213.house_robber_2/HouseRobber2.h
        #215.kth_largest_element_in_an_array/KthLargestElementInAnArray.cpp 215.kth_largest_element_in_an_array/KthLargestElementInAnArray.h
        #217.contains_duplicate/ContainsDuplicate.cpp 217.contains_duplicate/ContainsDuplicate.h
        #218.the_skyline_problem/TheSkylineProblem.cpp 218.the_skyline_problem/TheSkylineProblem.h
        #221.maximal_square/MaximalSquare.cpp 221.maximal_square/MaximalSquare.h
        #222.count_complete_tree_nodes/CountCompleteTreeNodes.cpp 222.count_complete_tree_nodes/CountCompleteTreeNodes.h
        #225.implement_stack_using_queues/ImplementStackUsingQueues.cpp 225.implement_stack_using_queues/ImplementStackUsingQueues.h
        #226.invert_binary_tree/InvertBinaryTree.cpp 226.invert_binary_tree/InvertBinaryTree.h
        #227.basic_calculator_2/BasicCalculator2.cpp 227.basic_calculator_2/BasicCalculator2.h
        #230.kth_smallest_element_in_a_BST/KthSmallestElementInABST.cpp 230.kth_smallest_element_in_a_BST/KthSmallestElementInABST.h
        #232.implement_queue_using_stacks/ImplementQueueUsingStacks.cpp 232.implement_queue_using_stacks/ImplementQueueUsingStacks.h
        #234.palindrome_linked_list/PalindromeLinkedList.cpp 234.palindrome_linked_list/PalindromeLinkedList.h
        #235.lowest_common_ancestor_of_a_binary_search_tree/LowestCommonAncestorOfABinarySearchTree.cpp 235.lowest_common_ancestor_of_a_binary_search_tree/LowestCommonAncestorOfABinarySearchTree.h
        #236.lowest_common_ancestor_of_a_binary_tree/LowestCommonAncestorOfABinaryTree.cpp 236.lowest_common_ancestor_of_a_binary_tree/LowestCommonAncestorOfABinaryTree.h
        #237.delete_node_in_a_linked_list/DeleteNodeInALinkedList.cpp 237.delete_node_in_a_linked_list/DeleteNodeInALinkedList.h
        #238.product_of_array_except_self/ProductOfArrayExceptSelf.cpp 238.product_of_array_except_self/ProductOfArrayExceptSelf.h
        #239.sliding_window_maximum/SlidingWindowMaximum.cpp 239.sliding_window_maximum/SlidingWindowMaximum.h
        #240.search_a_2d_matrix_2/SearchA2DMatrix2.cpp 240.search_a_2d_matrix_2/SearchA2DMatrix2.h
        #241.different_ways_to_add_parentheses/DifferentWaysToAddParentheses.cpp 241.different_ways_to_add_parentheses/DifferentWaysToAddParentheses.h
        #242.valid_anagram/ValidAnagram.cpp 242.valid_anagram/ValidAnagram.h
        #257.binary_tree_paths/BinaryTreePaths.cpp 257.binary_tree_paths/BinaryTreePaths.h
        #260.single_number3/SingleNumber3.cpp 260.single_number3/SingleNumber3.h
        #264.ugly_number_2/UglyNumber2.cpp 264.ugly_number_2/UglyNumber2.h
        #268.missing_number/MissingNumber.cpp 268.missing_number/MissingNumber.h
        #279.perfect_squares/PerfectSquares.cpp 279.perfect_squares/PerfectSquares.h
        #279.perfect_squares/PerfectSquares.cpp 279.perfect_squares/PerfectSquares.h
        #283.move_zeroes/MoveZeroes.cpp 283.move_zeroes/MoveZeroes.h
        #287.find_the_duplicate_number/FindTheDuplicateNumber.cpp 287.find_the_duplicate_number/FindTheDuplicateNumber.h
        #289.game_of_life/GameOfLife.cpp 289.game_of_life/GameOfLife.h
        #295.find_median_from_data_stream/FindMedianFromDataStream.cpp 295.find_median_from_data_stream/FindMedianFromDataStream.h
        #297.serialize_and_deserialize_binary_tree/SerializeAndDeserializeBinaryTree.cpp 297.serialize_and_deserialize_binary_tree/SerializeAndDeserializeBinaryTree.h
        #300.longest_increasing_subsequence/LongestIncreasingSubsequence.cpp 300.longest_increasing_subsequence/LongestIncreasingSubsequence.h
        #301.remove_invalid_parentheses/RemoveInvalidParentheses.cpp 301.remove_invalid_parentheses/RemoveInvalidParentheses.h
        #309.best_time_to_buy_and_sell_stock_with_cooldown/BestTimeToBuyAndSellStockWithCooldown.cpp 309.best_time_to_buy_and_sell_stock_with_cooldown/BestTimeToBuyAndSellStockWithCooldown.h
        #310.minimum_height_trees/MinimumHeightTrees.cpp 310.minimum_height_trees/MinimumHeightTrees.h
        #312.burst_balloons/BurstBalloons.cpp 312.burst_balloons/BurstBalloons.h
        #315.count_of_smaller_numbers_after_self/CountOfSmallerNumbersAfterSelf.cpp 315.count_of_smaller_numbers_after_self/CountOfSmallerNumbersAfterSelf.h
        #322.coin_change/CoinChange.cpp 322.coin_change/CoinChange.h 46.permutations/Permutations.cpp 46.permutations/Permutations.h
        #324.wiggle_sort_2/WiggleSort2.cpp 324.wiggle_sort_2/WiggleSort2.h
        #326.power_of_three/PowerOfThree.cpp 326.power_of_three/PowerOfThree.h
        #328.odd_even_linked_list/OddEvenLinkedList.cpp 328.odd_even_linked_list/OddEvenLinkedList.h
        #329.longest_increasing_path_in_a_matrix/LongestIncreasingPathInAMatrix.cpp 329.longest_increasing_path_in_a_matrix/LongestIncreasingPathInAMatrix.h
        #334.increasing_triplet_subsequence/IncreasingTripletSubsequence.cpp 334.increasing_triplet_subsequence/IncreasingTripletSubsequence.h
        #337.house_robber_3/HouseRobber3.cpp 337.house_robber_3/HouseRobber3.h
        #338.counting_bits/CountingBits.cpp 338.counting_bits/CountingBits.h
        #341.flatten_nested_list_iterator/FlattenNestedListIterator.cpp 341.flatten_nested_list_iterator/FlattenNestedListIterator.h
        #344.reverse_string/ReverseString.cpp 344.reverse_string/ReverseString.h
        #347.top_k_frequent_elements/TopKFrequentElements.cpp 347.top_k_frequent_elements/TopKFrequentElements.h
        #350.intersection_of_two_arrays_2/IntersectionOfTwoArrays2.cpp 350.intersection_of_two_arrays_2/IntersectionOfTwoArrays2.h
        #371.sum_of_two_integers/SumOfTwoIntegers.cpp 371.sum_of_two_integers/SumOfTwoIntegers.h
        #377.combination_sum_4/CombinationSum4.cpp 377.combination_sum_4/CombinationSum4.h
        #378.kth_smallest_element_in_a_sorted_matrix/KthSmallestElementInASortedMatrix.cpp 378.kth_smallest_element_in_a_sorted_matrix/KthSmallestElementInASortedMatrix.h
        #380.insert_delete_get_random/InsertDeleteGetRandom.cpp 380.insert_delete_get_random/InsertDeleteGetRandom.h
        #384.shuffle_an_array/ShuffleAnArray.cpp 384.shuffle_an_array/ShuffleAnArray.h
        #387.first_unique_character_in_a_string/FirstUniqueCharacterInAString.cpp 387.first_unique_character_in_a_string/FirstUniqueCharacterInAString.h
        #394.decode_string/DecodeString.cpp 394.decode_string/DecodeString.h
        #395.longest_substring_with_at_least_k_repeating_characters/LongestSubstringWithAtLeastKRepeatingCharacters.cpp 395.longest_substring_with_at_least_k_repeating_characters/LongestSubstringWithAtLeastKRepeatingCharacters.h
        #399.evaluate_division/EvaluateDivision.cpp 399.evaluate_division/EvaluateDivision.h
        #402.remove_k_digits/RemoveKDigits.cpp 402.remove_k_digits/RemoveKDigits.h
        #406.queue_reconstruction_by_height/QueueReconstructionByHeight.cpp 406.queue_reconstruction_by_height/QueueReconstructionByHeight.h
        #409.longest_palindrome/LongestPalindrome.cpp 409.longest_palindrome/LongestPalindrome.h
        #412.fizz_buzz/FizzBuzz.cpp 412.fizz_buzz/FizzBuzz.h
        #416.partition_equal_subset_sum/PartitionEqualSubsetSum.cpp 416.partition_equal_subset_sum/PartitionEqualSubsetSum.h
        #437.path_sum_3/PathSum3.cpp 437.path_sum_3/PathSum3.h
        #438.find_anagrams/FindAnagrams.cpp 438.find_anagrams/FindAnagrams.h
        #442.find_all_duplicates_in_an_array/FindAllDuplicatesInAnArray.cpp 442.find_all_duplicates_in_an_array/FindAllDuplicatesInAnArray.h
        #448.find_disappeared_numbers/FindDisappearedNumbers.cpp 448.find_disappeared_numbers/FindDisappearedNumbers.h
        #450.delete_node_in_a_BST/DeleteNodeInABST.cpp 450.delete_node_in_a_BST/DeleteNodeInABST.h
        #451.sort_characters_by_frequency/SortCharactersByFrequency.cpp 451.sort_characters_by_frequency/SortCharactersByFrequency.h
        #454.four_sum_2/FourSum2.cpp 454.four_sum_2/FourSum2.h
        #461.hamming_distance/HammingDistance.cpp 461.hamming_distance/HammingDistance.h
        #463.island_perimeter/IslandPerimeter.cpp 463.island_perimeter/IslandPerimeter.h
        #486.predict_the_winner/PredictTheWinner.cpp 486.predict_the_winner/PredictTheWinner.h
        #494.target_sum/TargetSum.cpp 494.target_sum/TargetSum.h
        #503.next_greater_element_2/NextGreaterElement2.cpp 503.next_greater_element_2/NextGreaterElement2.h
        #516.longest_palindromic_subsequence/LongestPalindromicSubsequence.cpp 516.longest_palindromic_subsequence/LongestPalindromicSubsequence.h
        #525.contiguous_array/ContiguousArray.cpp 525.contiguous_array/ContiguousArray.h
        #538.convert_BST_to_greater_tree/ConvertBSTToGreaterTree.cpp 538.convert_BST_to_greater_tree/ConvertBSTToGreaterTree.h
        #540.single_element_in_a_sorted_array/SingleElementInASortedArray.cpp 540.single_element_in_a_sorted_array/SingleElementInASortedArray.h
        #543.diameter_of_binary_tree/DiameterOfBinaryTree.cpp 543.diameter_of_binary_tree/DiameterOfBinaryTree.h
        #547.friend_circles/FriendCircles.cpp 547.friend_circles/FriendCircles.h
        #557.reverse_words_in_a_string3/ReverseWordsInAString3.cpp 557.reverse_words_in_a_string3/ReverseWordsInAString3.h
        #560.subarray_sum_equals_k/SubarraySumEqualsK.cpp 560.subarray_sum_equals_k/SubarraySumEqualsK.h
        #572.subtree_of_another_tree/SubtreeOfAnotherTree.cpp 572.subtree_of_another_tree/SubtreeOfAnotherTree.h
        #581.shortest_unsorted_continuous_subarray/ShortestUnsortedContinuousSubarray.cpp #581.shortest_unsorted_continuous_subarray/ShortestUnsortedContinuousSubarray.h
        #583.delete_operation_for_two_strings/DeleteOperationForTwoStrings.cpp 583.delete_operation_for_two_strings/DeleteOperationForTwoStrings.h
        #617.merge_two_binary_trees/MergeTwoBinaryTrees.cpp 617.merge_two_binary_trees/MergeTwoBinaryTrees.h
        #621.task_scheduler/TaskScheduler.cpp 621.task_scheduler/TaskScheduler.h
        #632.smallest_range/SmallestRange.cpp 632.smallest_range/SmallestRange.h
        #637.average_of_levels_in_binary_tree/AverageOfLevelsInBinaryTree.cpp 637.average_of_levels_in_binary_tree/AverageOfLevelsInBinaryTree.h
        #647.palindromic_substrings/PalindromicSubstrings.cpp 647.palindromic_substrings/PalindromicSubstrings.h
        #650.2_keys_keyboard/TwoKeysKeyboard.cpp 650.2_keys_keyboard/TwoKeysKeyboard.h
        #653.two_sum_4/TwoSum4.cpp 653.two_sum_4/TwoSum4.h
        #654.maximum_binary_tree/MaximumBinaryTree.cpp 654.maximum_binary_tree/MaximumBinaryTree.h
        #665.non_decreasing_array/NonDecreasingArray.cpp 665.non_decreasing_array/NonDecreasingArray.h
        #669.trim_a_binary_search_tree/TrimABinarySearchTree.cpp 669.trim_a_binary_search_tree/TrimABinarySearchTree.h
        #673.number_of_longest_increasing_subsequence/NumberOfLongestIncreasingSubsequence.cpp 673.number_of_longest_increasing_subsequence/NumberOfLongestIncreasingSubsequence.h
        #680.valid_palindrome_2/ValidPalindrome2.cpp 680.valid_palindrome_2/ValidPalindrome2.h
        #687.longest_univalue_path/LongestUnivaluePath.cpp 687.longest_univalue_path/LongestUnivaluePath.h
        #695.max_area_of_island/MaxAreaOfIsland.cpp 695.max_area_of_island/MaxAreaOfIsland.h
        #714.best_time_to_buy_and_sell_stock_with_transaction_fee/BestTimeToBuyAndSellStockWithTransactionFee.cpp 714.best_time_to_buy_and_sell_stock_with_transaction_fee/BestTimeToBuyAndSellStockWithTransactionFee.h
        #739.daily_temperatures/DailyTemperatures.cpp 739.daily_temperatures/DailyTemperatures.h
        #746.min_cost_climbing_stairs/MinCostClimbingStairs.cpp 746.min_cost_climbing_stairs/MinCostClimbingStairs.h
        #771.jewels_and_stones/JewelsAndStones.cpp 771.jewels_and_stones/JewelsAndStones.h
        #435.non_overlapping_Intervals/NonOverlappingIntervals.cpp 435.non_overlapping_Intervals/NonOverlappingIntervals.h
        #994.rotting_oranges/RottingOranges.cpp 994.rotting_oranges/RottingOranges.h
        #914.x_of_a_kind_in_a_deck_of_cards/XOfAKindInADeckOfCards.cpp 914.x_of_a_kind_in_a_deck_of_cards/XOfAKindInADeckOfCards.h
        #233.number_of_digit_one/NumberOfDigitOne.cpp 233.number_of_digit_one/NumberOfDigitOne.h
        #1009.complement-of-base-10-integer/ComplementOfBase10Integer.cpp 1009.complement-of-base-10-integer/ComplementOfBase10Integer.h
        #485.max-consecutive-ones/MaxConsecutiveOnes.cpp 485.max-consecutive-ones/MaxConsecutiveOnes.h
        #1004.max-consecutive-ones-iii/MaxConsecutiveOnes3.cpp 1004.max-consecutive-ones-iii/MaxConsecutiveOnes3.h
        #703.kth-largest-element-in-a-stream/KthLargestElementInAStream.cpp 703.kth-largest-element-in-a-stream/KthLargestElementInAStream.h
        #1306.jump-game-iii/JumpGame3.cpp 1306.jump-game-iii/JumpGame3.h
        #1054.distant-barcodes/DistantBarcodes.cpp 1054.distant-barcodes/DistantBarcodes.h
        #704.binary-search/BinarySearch.cpp 704.binary-search/BinarySearch.h
        #383.RansomNote/RansomNote.cpp 383.RansomNote/RansomNote.h
        #949.largest-time-for-given-digits/LargestTimeForGivenDigits.cpp 949.largest-time-for-given-digits/LargestTimeForGivenDigits.h
        #1325.delete-leaves-with-a-given-value/DeleteLeavesWithAGivenValue.cpp 1325.delete-leaves-with-a-given-value/DeleteLeavesWithAGivenValue.h
        #343.integer-break/IntegerBreak.cpp 343.integer-break/IntegerBreak.h
        #1027.longest-arithmetic-sequence/LongestArithmeticSequence.cpp 1027.longest-arithmetic-sequence/LongestArithmeticSequence.h
        645.set-mismatch/SetMismatch.cpp 645.set-mismatch/SetMismatch.h
        )
